# delightful

./: .dockerignore  .env.example  .gitignore  CHINESE_STRINGS_TRANSLATION_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  README.md  README_CN.md  analyze_chinese.py  analyze_remaining.py  batch_translate_chinese.py  batch_translate_remaining.ps1  check_chinese.py  check_remaining.py  chinese_files_list.txt  chinese_report.py  cleanup_translate.py  comprehensive_translate.py  docker-compose.yaml  final_cleanup.py  final_translate.py  final_translate_lens.py  find_chinese.py  generate_translations.py  remaining_chars.txt  replace_useTest.py  repo_wide_translate.py  targeted_cleanup.py  task_scheduler_chinese_lines.txt  task_scheduler_remaining_chinese.txt  translate_all_chinese.py  translate_batch.py  translate_final.py  translate_helper.py  translate_image_prompts.py  translate_lens.py  translate_pass4.py  translate_pass5.py  translate_pass6.py  (+7 more)
backend/: Dockerfile.service  (+1 more)
backend/super-magic/agentlang/: README.md  complete_translation.py  pyproject.toml  setup.py
backend/super-magic/agentlang/agentlang/: __init__.py  environment.py  exceptions.py  logger.py  paths.py
backend/super-magic/agentlang/agentlang/agent/: __init__.py  base.py  loader.py  state.py
backend/super-magic/agentlang/agentlang/chat_history/: __init__.py  chat_history.py  chat_history_compressor.py  chat_history_models.py
backend/super-magic/agentlang/agentlang/config/: __init__.py  config.py
backend/super-magic/agentlang/agentlang/context/: __init__.py  application_context.py  base_agent_context.py  base_context.py  shared_context.py  tool_context.py
backend/super-magic/agentlang/examples/: simple_agent.py
(+12043 files in other folders)
